# adaptive_shape_approximation

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  circle_adaptive.cpp  circle_pert_vels.cpp  circle_quad_approx_error.cpp  circle_random_sampling.cpp  circle_smooth_sampling.cpp  ellipse_pert_vels.cpp  ellipse_random_sampling.cpp  kite_adaptive.cpp  kite_pert_vels.cpp  kite_quad_approx_error.cpp  kite_random_sampling.cpp  quad_approx_circle.cpp
include/: adaptive_algorithm.hpp  functionals.hpp  pert_vels.hpp  shape_calculus.hpp  subspace_iteration.hpp
