cmake_minimum_required(VERSION 2.8)
set(CMAKE_BUILD_TYPE Release)

set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_RELEASE "-O2")
#set(CMAKE_CXX_FLAGS "-O3")
#set(CMAKE_CXX_FLAGS -DNDEBUG)
set(CMAKE_CXX_FLAGS "-std=c++11")
add_definitions(-DMM=$(mm) -DNN=$(nn) -DVEL=$(vel))

include_directories(${PROJECT_SOURCE_DIR}/include)
include_directories(${PROJECT_SOURCE_DIR}/external/2DParametricBEM/include)
include_directories(/usr/include/eigen3)

add_executable(quadapprox quad_approx.cpp)
add_executable(quadapproxcircle quad_approx_circle.cpp)
add_executable(circle_pert_vels circle_pert_vels.cpp)
add_executable(circle_random_sampling circle_random_sampling.cpp)
add_executable(ellipse_pert_vels ellipse_pert_vels.cpp)
add_executable(ellipse_random_sampling ellipse_random_sampling.cpp)
add_executable(circle_quad_approx_error circle_quad_approx_error.cpp)
add_executable(kite_quad_approx_error kite_quad_approx_error.cpp)
add_executable(kite_random_sampling kite_random_sampling.cpp)
add_executable(kite_pert_vels kite_pert_vels.cpp)
add_executable(circle_adaptive circle_adaptive.cpp)
add_executable(kite_adaptive kite_adaptive.cpp)

target_link_libraries(quadapprox single_layer parametrizations quadrature)
target_link_libraries(quadapproxcircle single_layer parametrizations quadrature)
target_link_libraries(circle_pert_vels single_layer parametrizations quadrature)
target_link_libraries(circle_random_sampling single_layer parametrizations quadrature)
target_link_libraries(ellipse_pert_vels single_layer parametrizations quadrature)
target_link_libraries(ellipse_random_sampling single_layer parametrizations quadrature)
target_link_libraries(circle_quad_approx_error single_layer parametrizations quadrature)
target_link_libraries(kite_quad_approx_error single_layer parametrizations quadrature)
target_link_libraries(kite_random_sampling single_layer parametrizations quadrature)
target_link_libraries(kite_pert_vels single_layer parametrizations quadrature)
target_link_libraries(circle_adaptive single_layer parametrizations quadrature)
target_link_libraries(kite_adaptive single_layer parametrizations quadrature)


